# FloatGuard

./: Dockerfile  Makefile  README.md  build_llvm_env.sh  build_single_plugin.sh  run_all.py  run_docker.sh  run_hipify_docker.sh  setup.sh
benchmarks/: NPB-GPU-patch.txt  PolyBench-patch.txt  rodinia_patch.txt  setup_rodinia.sh
benchmarks/GPGPU_SIM/: clean_all.sh  comp_run_all.sh  helper_math.h  shared.mk
benchmarks/GPGPU_SIM/cp/: Makefile  cuenergy.h  cuenergy_pre8_coalesce.cu  main.cu  run  setup.ini
benchmarks/GPGPU_SIM/libor/: Makefile  libor.cu  run  setup.ini
benchmarks/GPGPU_SIM/lps/: Makefile  laplace3d.cu  laplace3d_kernel.cu  run  setup.ini
benchmarks/GPGPU_SIM/mum/: Makefile  mummergpu.cu  mummergpu_kernel.cu  run  setup.ini  suffix-tree.cpp
benchmarks/GPGPU_SIM/rayTracing/: Makefile  rayTracing.cu  rayTracing_kernel.cu  run  setup.ini
benchmarks/GPGPU_SIM/wp/: Makefile  a  module_mp_wsm5.F  setup.ini  spt.h  util4.cu  wsm5.cu  wsm5_gpu.cu  wsm5_gpu_f.cu  wsm5gpu_20221003.tar
benchmarks/NPB-GPU/CUDA/: Makefile
benchmarks/NPB-GPU/CUDA/BT/: Makefile  Makefile.all  bt.cu  setup.ini
benchmarks/NPB-GPU/CUDA/CG/: Makefile  Makefile.all  cg.cu  setup.ini
benchmarks/NPB-GPU/CUDA/EP/: Makefile  Makefile.all  ep.cu  setup.ini
benchmarks/NPB-GPU/CUDA/FT/: Makefile  Makefile.all  ft.cu  setup.ini
benchmarks/NPB-GPU/CUDA/IS/: Makefile
benchmarks/NPB-GPU/CUDA/LU/: Makefile  Makefile.all  lu.cu  setup.ini
benchmarks/NPB-GPU/CUDA/MG/: Makefile  Makefile.all  mg.cu  setup.ini
benchmarks/NPB-GPU/CUDA/SP/: Makefile  Makefile.all  setup.ini  sp.cu
benchmarks/NPB-GPU/CUDA/common/: wtime.hpp
benchmarks/NPB-GPU/CUDA/config/: make.def
benchmarks/NPB-GPU/CUDA/sys/: setparams.cpp
benchmarks/PolyBench-ACC-0.1/CUDA/utilities/: common.mk
benchmarks/cuda_examples/src/case_110/: setup.ini
benchmarks/cuda_examples/src/case_167/: Makefile
benchmarks/cuda_examples/src/case_181/: Makefile
benchmarks/cuda_examples/src/case_359/: Makefile
benchmarks/cuda_examples/src/case_36/: Makefile
benchmarks/cuda_examples/src/case_363/: Makefile
benchmarks/cuda_examples/src/case_7/: Makefile
benchmarks/parboil/: parboil  setup_cutcp.ini  setup_histo.ini  setup_lbm.ini  setup_mri-q.ini  setup_sad.ini  setup_sgemm.ini  setup_spmv.ini  setup_stencil.ini  setup_tpacf.ini
benchmarks/parboil/common/mk/: c.mk  cuda.mk
benchmarks/parboil/common/platform/: c.default.mk  cuda.default.mk
benchmarks/parboil/common/src/: parboil_cuda.c  parboil_opencl.c
benchmarks/parboil/driver/: actions.py  benchmark.py  options.py  ppkg.py  process.py  sanity_check.py  text.py
benchmarks/rochpcg/: CMakeLists.txt  install.sh  setup.ini
benchmarks/rodinia_3.1/: .gitattributes
benchmarks/rodinia_3.1/common/: make.config
benchmarks/shoc/: .gitignore  Makefile  config.status  configure
benchmarks/shoc/config/: 1  common.mk  common.mk.in  config.h
benchmarks/shoc/doc/: Makefile
benchmarks/shoc/src/: Makefile
benchmarks/shoc/tools/: Makefile  buildFlags.txt  compilerVersion.txt  shocdriver
clang-examples/: CMakeLists.txt
clang-examples/FloatGuard-plugin/: FloatGuard-plugin.cpp  Makefile  TransformMutations.cpp  TransformMutations.h
clang-examples/hipec-plugin/: Makefile  TransformMutations.cpp
gdb_script/: exception_capture_light.py  exception_capture_old.py  exception_capture_rerun.py  hipcc_wrapper.py  hipcc_wrapper.sh  inject_asm.py  time_measure.py
inst_pass/: CMakeLists.txt  Makefile
inst_pass/Inst/: CMakeLists.txt  Inst.cpp  InstStub.cpp  InstStub.h  Makefile.stub
samples/div0/: Makefile  setup.ini
samples/div0_cmake/: CMakeLists.txt
samples/vector_addition/: Makefile  vector_addition.cpp
(+319 files in other folders)
